sprint nov 27 changes

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 		<div class="main-holder">
 			<article class="content">
 				<h1 class="heading">The Speed and Features You Need</h1>
-				<p>We are one of the fastest CDNs in the industry, but speed is nothing without control.<br/>We offer on-demand purging (cache invalidation) and provisioning, a fully documented and supported API and a robust suite of security features. We stand behind our CDN with<br/>24/7/365 support at a competitive price.</p>
+				<p>We are one of the fastest CDNs in the industry, but speed is nothing without control.<br/>We offer on-demand purging (cache invalidation) and provisioning, a fully documented and supported API and a robust suite of security features. We stand behind our CDN with<br/>24/7/365 support while offering competitive bandwidth pricing.</p>
 				<strong class="large-heading orange">Reliability</strong>
 				<h2 class="heading">100% SLA</h2>
 				<p>Our redundant infrastructure and network are so reliable, we provide a 100% SLA to every enterprise client &mdash; for example, we use multiple upstream and DNS providers.</p>
@@ -203,6 +203,7 @@
 				</ul>
 				<a href="#popup-test" class="fancybox btn-speedreport">get the speed report</a>
 				<a href="#" class="btn-chat" onclick="return startWidget('chat');">chat online</a>
+				<p class="sidebar-phone textcenter"><strong>or give us a call at:<br/></strong><span class="phone-number">+1 (877) 629-2361</span>
 			</aside>
 		</div><!-- /main-holder -->
 	</div><!-- /main -->
@@ -219,7 +220,7 @@
 			<div class="perfomance-info" id="performance">
 				<h2 class="orange large-heading">Performance</h2>
 				<p>Our servers feature Nginx &mdash; known for its high performance, stability, rich feature set, simple configuration, and low resource consumption &mdash; and 100% SSDs in North America, Europe and Asia, connected to the internet with multiple 10 Gigabit ports.</p>
-				<p>Our redundant upstream providers includes GTT (which provides coverage in 24 countries) and Zayo (which provides coverage in seven countries); our 600 peering partners cover 90 countries and include AT&amp;T, Level 3, Time-Warner Cable, Cox, Comcast, Vodaphone and Rogers, among many others. Our response times consistently comes in at about 39ms according to Cedexis &mdash; but don't take our word for it. Use your own tools to test our speed. We know you'll be pleasantly surprised.</p>
+				<p>Our redundant upstream providers includes GTT and Zayo; our 600 peering partners cover 90 countries and include AT&amp;T, Level 3, Time-Warner Cable, Cox, Comcast, Vodaphone and Rogers, among many others. Our response time consistently come in at about 39ms according to Cedexis &mdash; but don't take our word for it. Use your own tools to test our speed. We know you'll be pleasantly surprised.</p>
 			</div><!-- /perfomance-info -->
 			<div class="tab-area" id="tabs-1">
 				<ul class="tabset">
@@ -260,16 +261,12 @@
 					</ul>
 				</div>
 			</div><!-- /tab-area -->
+
+			<h2 class="orange large-heading">Features</h2>
+			<p>In the slider below there is: instant provisioning, instant purge,<br/>SSD based network, powerful restful API and custom SSL.</p>
 		</article>
 	</div><!-- /main -->
-	<div class="testimonial testimonial-2">
-		<div class="holder">
-			<blockquote>
-				<q>MaxCDN is all about speed and efficiency, and helped us craft a new approach to our ad delivery methods. This approach has already lead BuySellAds to being nearly twice as fast. I would recommend them.</q>
-				<cite><img class="photo ie-fix" src="images/img-27.jpg" alt="image description" width="64" height="64" >Todd Garland | CEO, BUYSELLADS</cite>
-			</blockquote>
-		</div>
-	</div><!-- /testimonials -->
+
 	<div class="carousel" id="features">
 		<div class="holder">
 			<div class="wrap" id="carousel-holder">
@@ -279,9 +276,9 @@
 					<p>A 15,000 RPM SATA drive can perform between 175 to 210 IOPS a second. Our solid state Intel drives can perform between 5,000 to 8,500 IOPS a second, or up to 48x faster than a legacy drive.</p>
 				</div>
 				<div class="slide slide-current">
-					<div class="img"><img src="images/img-28.png" alt="image description"></div>
-					<strong class="name">Instant Purge</strong>
-					<p>Traditional CDNs find it acceptable to purge your cache in half an hour&mdash; we don't. Your cache will be purged in 30 seconds or less with us.</p>
+					<div class="img"><img src="images/img-31.png" alt="image description" ></div>
+					<strong class="name">Custom SSL</strong>
+					<p>Custom SSLs are a pain for traditional CDNs, taking up to a week and requiring an engineer. Our installation takes seconds &mdash; upload a certificate through the control panel or API, with no engineer required.</p>
 				</div>
 				<div class="slide slide-next">
 					<div class="img"><img src="images/img-29.png" alt="image description" ></div>
@@ -294,15 +291,25 @@
 					<p>Our REST API is fully documented and fully featured &mdash;  because it was built for us, by us. When you have questions, we have answers.</p>
 				</div>
 				<div class="slide" style="display:none;">
-					<div class="img"><img src="images/img-31.png" alt="image description" ></div>
-					<strong class="name">Custom SSL</strong>
-					<p>Custom SSLs are a pain for traditional CDNs, taking up to a week and requiring an engineer. Our installation takes seconds &mdash; upload a certificate through the control panel or API, with no engineer required.</p>
+					<div class="img"><img src="images/img-28.png" alt="image description"></div>
+					<strong class="name">Instant Purge</strong>
+					<p>Traditional CDNs find it acceptable to purge your cache in half an hour&mdash; we don't. Your cache will be purged in 30 seconds or less with us.</p>
 				</div>
-				<a href="#" class="btn-prev">prev</a>
-				<a href="#" class="btn-next">next</a>
+				<a href="#" class="btn-next">prev</a>
+				<a href="#" class="btn-prev">next</a>
 			</div>
 		</div>
 	</div><!-- /carousel -->
+
+	<div class="testimonial testimonial-2">
+		<div class="holder">
+			<blockquote>
+				<q>MaxCDN is all about speed and efficiency, and helped us craft a new approach to our ad delivery methods. This approach has already lead BuySellAds to being nearly twice as fast. I would recommend them.</q>
+				<cite><img class="photo ie-fix" src="images/img-27.jpg" alt="image description" width="64" height="64" >Todd Garland | CEO, BUYSELLADS</cite>
+			</blockquote>
+		</div>
+	</div><!-- /testimonials -->
+
 	<div class="main">
 		<article class="content">
 			<blockquote class="testimonial-block" id="security">
@@ -310,27 +317,27 @@
 				<cite><strong>Bruce Schneie</strong> | Cryptographer</cite>
 			</blockquote>
 			<h2 class="orange large-heading">Security</h2>
-			<p>Being able to secure your website is as important as its design and content. Having a fast website doesn't mean you should compromise your security.  We make sure that your website's fast, but that it's also secure using industry-leading encryption standards.</p>
+			<p>Being able to secure your website is as important as its design and content. Having a fast website doesn't mean you should compromise your security. We make sure that your website is fast, but that it's also secure using industry-leading encryption standards.</p>
 			<ul class="option-list">
 				<li>
 					<span class="ico">&nbsp;</span>
 					<strong class="name">EdgeSecurity</strong>
-					<p>We generate secure tokens without the wait and deploy them to your users with the same speed with this turnkey solution. Control who sees and who can download your content with digital protection and time sensitive links.</p>
+					<p>We generate secure tokens without the wait, and we deploy them to your users with the same speed using this turnkey solution. Control who sees and who can download your content with digital protection and time sensitive links.</p>
 				</li>
 				<li>
 					<span class="ico ico-2">&nbsp;</span>
 					<strong class="name">Two Step Authorization</strong>
-					<p>Protect your users with passwords, as well as a random code that changes every minute that's tied to their smartphones using Google Authenticator, available for all major smartphone platforms.</p>
+					<p>Protect your users with passwords, as well as a random code that changes every minute. We tie it to customer smartphones using Google Authenticator, which is available for all major smartphone platforms.</p>
 				</li>
 				<li>
 					<span class="ico ico-3">&nbsp;</span>
 					<strong class="name">EdgeSSL</strong>
-					<p>Our SSL certificates take seconds to provision and uses our optimized TCP stack, ciphers and hardware &mdash; which utilizes Intel Integrated Performance Primitives (IPP), for a 35 percent boost in SSL performance. It is delivered using our network of edge servers. We can also support your existing certificates or have us provision a certificate for you with one click.</p>
+					<p>Our SSL certificates take seconds to provision and they use our optimized TCP stack, ciphers and hardware. The certificates utilize Intel Integrated Performance Primitives (IPP), which are delivered via our network of edge servers, and boost SSL performance by 35 percent. We can support your existing certificates, and/or provision you a new certificate with one click.</p>
 				</li>
 				<li>
 					<span class="ico ico-4">&nbsp;</span>
 					<strong class="name">Extended API Security</strong>
-					<p>We go beyond OAuth authentication and offer whitelisting by IP address or CIDR blocks, as well as setting application permissions and limiting access to reporting data, purging privileges and zone management.</p>
+					<p>We go beyond OAuth authentication, offering our customers whitelisting by IP address, or CIDR blocks. We can also set application permissions and limit access to reporting data, purging privileges and utilizing zone management.</p>
 				</li>
 			</ul>
 		</article>
@@ -407,7 +414,65 @@
 			<h2 class="heading">No HTTP Request Charges. Ever.</h2>
 			<p>While it's easy to charge for requests, we're a content delivery network, not a request delivery network. We won't charge for requests, ever. I bet you thought you were going to have to read a bunch of qualifiers here, didn't you?</p>
 			<div class="img-block"><img src="images/img-34.png" alt="image description" width="629" height="234" ></div>
+
+
+			<!-- Free Trial section -->
+			<div class="free-trial footer-freetrial textleft">
+				<div class="column fourty first">
+					<p class="orange-text no-bottom-space"><strong>DO YOU USE OVER 25TB PER<br/>MONTH OF BANDWIDTH?</strong></p>
+					<h2 class="no-bottom-space"><strong>GET A 7 DAY FREE TRIAL</strong></h2>
+					<p class="copy">Check out our content delivery network and try out the new features that matter to you the most with our 7 day free trial.</p>
+					<ul class="simple-list" >
+						<li>Low global flat rate pricing</li>
+						<li>Features other CDNs don’t offer</li>
+						<li>Easiest to use control panel</li>
+						<li>24/7 superior support</li>
+						<li>High performance</li>
+					</ul>				
+				</div>
+				<div class="column sixty last">
+					<form method="post" enctype="application/x-www-form-urlencoded" action="http://resources.netdna.com/index.php/leadCapture/save" class="alignright">
+						<input type="hidden" name="lpId" value="-1" />
+						<input type="hidden" name="subId" value="127" />
+						<input type="hidden" name="kw" value="" />
+						<input type="hidden" name="cr" value="" />
+						<input type="hidden" name="searchstr" value="" />
+						<input type="hidden" name="_mkt_disp" value="return" />
+						<input type="hidden" name="_mkt_trk" value="" />
+						<input name="content__c" type='text' value="" class="hidden" />
+						<input name="LeadSource" type="hidden" value="MaxCDN.com">
+						<input name="Lead_Source_Detail__c" type="hidden" value="MaxCDN Contact Us Form">
+						<input type="hidden" name="lpurl" value="http://resources.netdna.com/MaxCDNContactUs.html?cr={creative}&kw={keyword}" />
+						<input type="hidden" name="formid" value="15" />
+						<input type="hidden" name="returnURL" value="https://enterprise.maxcdn.com/success/" />
+						<input type="hidden" name="retURL" value="https://enterprise.maxcdn.com/success/" />
+						<input name="URL_of_Lead_Source__c" type='hidden' value="https://enterprise.maxcdn.com/" />
+
+						<div class="trial-form custom-form">
+							<label>Email Address</label>
+							<input class="text required" type="email" name="Email" >
+							<label>Phone Number (optional)</label>
+							<input class="text " type="text" name="Phone" >
+							<label>URL of a file (2mb or under)</label>
+							<input class="text required" type="text" name="Website" placeholder="http://your-company.com/file.pdf">
+							<label>Your Monthly Bandwidth Usage</label>
+							<select class="required" name="NetDNA_Usage_Selection__c" tabindex="6">
+								<option value="Select Bandwidth" selected="selected">Select Bandwidth</option>
+								<option value="Under 5TB">Under 5TB</option>
+								<option value="5TB - 10TB">5TB - 10TB</option>
+								<option value="11 - 100TB">11 - 100TB</option>
+								<option value="101TB - 1,000TB">101TB - 1,000TB</option>
+								<option value="1PB+">1PB+</option>
+							</select>
+						</div>
+						<button type="submit" class="btn btn-submit">Request Free Trial</a>
+					</form>
+					<div class="clearfix"></div>
+				</div>
+				<div class="clearfix"></div>
+			</div>
 		</article>
+		<div class="clearfix"></div>
 	</div><!-- /main -->
 
 	<footer>
@@ -471,7 +536,7 @@
 				</dl>
 				<h3 class="orange">Address</h3>
 				<address>
-					<span class="str">MaxCDN</span>
+					<span class="str">MaxCDN Enterprise</span>
 					<span class="str">3575 Cahuenga Blvd. West, Suite 330</span>
 					<span class="str">Los Angeles, CA 90068</span>
 				</address>
@@ -494,7 +559,7 @@
 	<div class="hidden-popup">
 		<div class="popup" id="popup-contact">
 			<strong class="orange large-heading">Ready for Your Test Drive?</strong>
-			<p>Please fill out the form below, we'll give you a call to set up your free seven day enterprise trial.<br/>Try us out. See how fast we are for yourself. Give us a support call &mdash; you'll have access to priority support. We're sure that our service and performance will exceed your expectations.</p>
+			<p>Please fill out the form below and we'll give you a call to set up your free seven day MaxCDN Enterprise trial. Try us out and see how fast we are for yourself.</p><p>Give us a support call at <span class="phone-number">(877) 629-2361</span> &mdash; you'll have access to priority support.<br/>We're sure that our service and performance will exceed your expectations.</p>
 			<form method="post" enctype="application/x-www-form-urlencoded" action="http://resources.netdna.com/index.php/leadCapture/save">
 				<input type="hidden" name="lpId" value="-1" />
 				<input type="hidden" name="subId" value="127" />
@@ -553,7 +618,7 @@
 
 		<div class="popup" id="popup-test">
 			<strong class="orange large-heading">Test MaxCDN against your<br/>current solution for free</strong>
-			<p>We will provide you with a third party test ran by Catchpoint; it will measure your current CDN versus MaxCDN from different locations around the world. Once the test is completed, we'll provide a report which shows how they both performed. It can take up to 48 hours to send you the report.</p>
+			<p>We will provide you with a third party test ran by Catchpoint; it will measure your current CDN<br/>versus MaxCDN Enterprise from different locations around the world. Once the test is completed, we'll provide a report which shows how they both performed. It can take up to 48</br>hours to send you the report.</p>
 
 			<form method="post" enctype="application/x-www-form-urlencoded" action="http://resources.netdna.com/index.php/leadCapture/save">
 				<input type="hidden" name="lpId" value="-1" />
@@ -595,7 +660,7 @@
 					<div class="col">
 						<h3>How will this test help you?</h3>
 						<ul class="simple-list">
-							<li><strong>You can save money</strong>! If you're spending $5,000 on CDN now, we'll offer the same performance and reliability for $1,500.</li>
+							<li><strong>You can save money</strong>! If you're spending $5,000 on CDN now, we'll offer the same performance and reliability for $1,500. (These are example numbers.)</li>
 							<li><strong>You get real data</strong>, from a 3rd party (Catchpoint), to help drive your decisions.</li>
 						</ul>
 					</div>
@@ -612,21 +677,48 @@
     <script type="text/javascript" src="js/jquery.fancybox.pack.js"></script>
 	<script type="text/javascript" src="js/scripts.js"></script>
 
-	<script type="text/javascript">document.write(unescape("%3Cscript src='https://www.snapengage.com/snapabug.js' type='text/javascript'%3E%3C/script%3E"));</script>
 	<script type="text/javascript">
-	SnapABug.setDomain('.netdna.com');
-	SnapABug.setDomain('.maxcdn.com');
-	SnapABug.setDomain('.hddn.com');
-	SnapABug.setDomain('.cloudcache.com');
-	SnapABug.allowOffline(true);
-	SnapABug.showScreenshotOption(false);
-	SnapABug.init("d1f2393e-a5ce-4a36-bbe7-a82952e64d0d");
-	function startWidget(chatType) {
-	  SnapABug.setCallback('StartChat', function(email,msg,type) {
-		_gaq.push(['_trackPageview', '/livechat/' + chatType + '/']);
-	  });
-	  return SnapABug.startLink();
-	}</script>
+		var seAgent;
+		(function() {
+			var se = document.createElement('script'); se.type = 'text/javascript'; se.async = true;
+			se.src = '//commondatastorage.googleapis.com/code.snapengage.com/js/f398c989-6722-497a-a8ae-30c146db8f71.js';
+			var done = false;
+			var chatMsgCounter = 0;
+
+			se.onload = se.onreadystatechange = function() {
+				if (!done&&(!this.readyState||this.readyState==='loaded'||this.readyState==='complete')) {
+					done = true;
+					SnapABug.setCallback('OpenProactive', function(agent, msg, type) {
+						seAgent = agent;
+						_gaq.push(['_trackEvent', 'SnapEngage', 'proactivePrompt', agent]);
+					});
+
+					SnapABug.setCallback('StartChat', function(email, msg, type) {
+						_gaq.push(['_trackEvent', 'SnapEngage', type + "Engaged", seAgent]);
+					});
+
+					SnapABug.setCallback('ChatMessageReceived', function (agent, msg) {
+						seAgent = agent;
+					});
+
+					SnapABug.setCallback('Close', function (type, status) {
+						if (status === "online" && (type === "chat" || type === "proactive") && chatMsgCounter > 0) {
+							nicereplyPopup(snapengage_get_agent_name());
+							chatMsgCounter = 0;
+						}
+					});
+
+					SnapABug.setCallback('ChatMessageSent', function (msg) {
+						chatMsgCounter++;
+					});
+
+				}
+			};
+			var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(se, s);
+		})();
+		function startWidget(chatType) { return SnapABug.startLink(); }
+		function snapengage_get_agent_name() { return (typeof seAgent != 'undefined') ? seAgent : null; }
+	</script>
 
 	<script type="text/javascript">
 	var _mfq = _mfq || [];
@@ -654,6 +746,8 @@
 	   if(oldonload){oldonload()}};
 	}());
 	</script>
+
+	<script src="//cdn.optimizely.com/js/140761619.js"></script>
 
 	</body>
 </html>
