--- a/pricing/index.html
+++ b/pricing/index.html
@@ -229,7 +229,6 @@
 				<div class="textarea"><textarea class="required"  name="Contact_Form_Message__c" cols="30" rows="10" style="resize:none;" placeholder="Your Message"></textarea></div>
 				<div class="btn-holder">
 					<button class="btn" type="submit">Ask Ameer your question</button>
-					<br><br><section class="small">Sorry ladies, he's taken.</section>
 				</div>
 			</form>
 		</div>
@@ -239,7 +238,7 @@
 		<div class="holder">
 			<div class="heading-block">
 				<h2 class="orange large-heading">How Much for How Much?</h2>
-				<p>Between our fast connectivity and blazing servers, 24/7/365 priority support, fully documented and supported REST API and powerful &mdash; but easy to use &mdash; control panel, there's a lot to like at MaxCDN. We're also sure you'll be pleasantly surprised with our competitive pricing.</p>
+				<p>Between our fast connectivity and blazing servers, 24/7/365 priority support, fully documented and supported REST API and powerful &mdash; but easy to use &mdash; control panel, there's a lot to like at MaxCDN Enterprise. We're also sure you'll be pleasantly surprised with our competitive pricing.</p>
 			</div>
 			<div class="price-form">
 				<form action="#">
@@ -255,6 +254,9 @@
 				</form>
 			</div>
 			<div class="price-section">
+
+				<p class="textcenter bw-tier-notice"><strong>Important!</strong> You qualify for our below 2&cent; list pricing and may be as low as 1&cent;. On average we save our clients over 1/3 off their current CDN bill by using us as a main CDN provider or adding us on a multi CDN strategy. Try us for 30-days with no commitment.</p>
+
 				<div class="total">
 					<strong class="name">60TB per month</strong>
 					<span class="value">$1840</span>
@@ -315,8 +317,8 @@
 							<option data-range="1024-infin" value="1PB+">1PB+</option>
 						</select>
 
-						<h3 class="heading">If you're ready, we're ready for you.</h3>
-						<p>Have a question? We have an answer.</p>
+						<h3 class="heading">Want to discuss better pricing or questions about our service?</h3>
+						<p>We can give you a quick answer.</p>
 						<div class="container">
 							<div class="col">
 								<label>First Name</label>
@@ -391,7 +393,7 @@
 				</div>
 			</div>
 			<div class="col">
-				<h3>Why Give MaxCDN a Spin?</h3>
+				<h3>Why Give MaxCDN Enterprise a Spin?</h3>
 				<ul class="simple-list">
 					<li>Competitive, flat rate pricing &mdash; worldwide</li>
 					<li>Instant provisioning, purging and SSL installation, unlike traditional CDNs</li>
@@ -491,7 +493,7 @@
 				</dl>
 				<h3 class="orange">Address</h3>
 				<address>
-					<span class="str">MaxCDN</span>
+					<span class="str">MaxCDN Enterprise</span>
 					<span class="str">3575 Cahuenga Blvd. West, Suite 330</span>
 					<span class="str">Los Angeles, CA 90068</span>
 				</address>
@@ -513,7 +515,7 @@
 	<div class="hidden-popup">
 		<div class="popup" id="popup-contact">
 			<strong class="orange large-heading">Ready for Your Test Drive?</strong>
-			<p>Please fill out the form below, we'll give you a call to set up your free seven day enterprise trial.<br/>Try us out. See how fast we are for yourself. Give us a support call &mdash; you'll have access to priority support. We're sure that our service and performance will exceed your expectations.</p>
+			<p>Please fill out the form below and we'll give you a call to set up your free seven day MaxCDN Enterprise trial. Try us out and see how fast we are for yourself.</p><p>Give us a support call at <span class="phone-number">(877) 629-2361</span> &mdash; you'll have access to priority support.<br/>We're sure that our service and performance will exceed your expectations.</p>
 			<form method="post" enctype="application/x-www-form-urlencoded" action="http://resources.netdna.com/index.php/leadCapture/save">
 				<input type="hidden" name="lpId" value="-1" />
 				<input type="hidden" name="subId" value="127" />
@@ -578,21 +580,36 @@
     <script type="text/javascript" src="../js/jquery.fancybox.pack.js"></script>
 	<script type="text/javascript" src="../js/scripts.js"></script>
 
-	<script type="text/javascript">document.write(unescape("%3Cscript src='https://www.snapengage.com/snapabug.js' type='text/javascript'%3E%3C/script%3E"));</script>
 	<script type="text/javascript">
-	SnapABug.setDomain('.netdna.com');
-	SnapABug.setDomain('.maxcdn.com');
-	SnapABug.setDomain('.hddn.com');
-	SnapABug.setDomain('.cloudcache.com');
-	SnapABug.allowOffline(true);
-	SnapABug.showScreenshotOption(false);
-	SnapABug.init("d1f2393e-a5ce-4a36-bbe7-a82952e64d0d");
-	function startWidget(chatType) {
-	  SnapABug.setCallback('StartChat', function(email,msg,type) {
-		_gaq.push(['_trackPageview', '/livechat/' + chatType + '/']);
-	  });
-	  return SnapABug.startLink();
-	}</script>
+		(function() {
+			var se = document.createElement('script'); se.type = 'text/javascript'; se.async = true;
+			se.src = '//commondatastorage.googleapis.com/code.snapengage.com/js/f398c989-6722-497a-a8ae-30c146db8f71.js';
+			var done = false;
+			
+			se.onload = se.onreadystatechange = function() {
+				if (!done&&(!this.readyState||this.readyState==='loaded'||this.readyState==='complete')) {
+					done = true;
+					var seAgent;
+					SnapABug.setCallback('OpenProactive', function(agent, msg, type) {
+						seAgent = agent;
+						_gaq.push(['_trackEvent', 'SnapEngage', 'proactivePrompt', agent]);
+					});
+
+					SnapABug.setCallback('StartChat', function(email, msg, type) {
+						_gaq.push(['_trackEvent', 'SnapEngage', type + "Engaged", seAgent]);
+					});
+				}
+			};
+			var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(se, s);
+
+			function startWidget(chatType) {
+			  SnapABug.setCallback('StartChat', function(email,msg,type) {
+				_gaq.push(['_trackPageview', '/livechat/' + chatType + '/']);
+			  });
+			  return SnapABug.startLink();
+			}
+		})();
+	</script>
 
 	<script type="text/javascript">
 	var _mfq = _mfq || [];
@@ -621,5 +638,7 @@
 	}());
 	</script>
 
-</body>
+	<script src="//cdn.optimizely.com/js/140761619.js"></script>
+
+	</body>
 </html>
